place add form by js

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     </div>
 
     <script src="./scripts/index.js"></script>
-    <template id="card-template">
+    <template class="card-template">
       <li class="content__element">
         <button class="content__element-delete-button" type="button"></button>
         <img alt="Одно из любимых мест" class="content__element-image" src="" />
