сфкв add like del  by js

--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
     </div>
 
     <script src="./scripts/index.js"></script>
+
+    <!--template-->
     <template class="card-template">
       <li class="content__element">
         <button class="content__element-delete-button" type="button"></button>
