--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </section>
       <section>
         <ul class="content">
-          <li class="content__element">
+          <!--<li class="content__element">
             <button
               class="content__element-delete-button"
               type="button"
@@ -136,7 +136,7 @@
                 type="button"
               ></button>
             </div>
-          </li>
+          </li>-->
         </ul>
       </section>
     </main>
@@ -190,8 +190,6 @@
         </form>
       </div>
     </div>
-
-    <script src="./scripts/index.js"></script>
     <!--template-->
     <template class="card-template">
       <li class="content__element">
@@ -202,7 +200,7 @@
           <button class="content__element-like-button" type="button"></button>
         </div>
       </li>
-      `
     </template>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
