cards: render, add, del, like

--- a/index.html
+++ b/index.html
@@ -163,10 +163,8 @@
         </form>
       </div>
     </div>
-
     <!--Pop-up__place-->
-
-    <div class="pop-up__type_place">
+    <div class=".pop-up pop-up__type_place">
       <div class="pop-up__window pop-up__window_place">
         <button
           class="pop-up__close-icon pop-up__close-icon_place"
@@ -190,6 +188,8 @@
         </form>
       </div>
     </div>
+    <!--Pop-up__pic-->
+
     <!--template-->
     <template class="card-template">
       <li class="content__element">
