--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@
       </div>
     </div>
     <!--Pop-up__pic-->
-    <div class="pop-up__type_pic">
+  <!--  <div class="pop-up__type_pic">
       <div class="pop-up__window-pic">
         <button class="pop-up__close-icon_pic" type="button"></button>
         <img class="pop-up__image" src="./images/1088404.jpg" alt="" />
         <h3 class="pop-up__image-subtitle">Annotation</h3>
       </div>
-    </div>
+    </div>-->
     <!--template-->
     <template class="card-template">
       <li class="content__element">
